--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,6 +1,3 @@
-.message-success {
-  border: 2px solid #5DC8A1;
-  color: #5DC8A1;
-  padding: 1em;
-  border-radius: 5px;
-}
+$red: #F16363;
+$blue: #2F56A2;
+$green: #5DC8A1;
