--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,15 +9,22 @@ body {
 }
 
 .message-base {
-  border: 2px solid #F16363;
-  color: #F16363;
+  border: 2px solid $red;
+  color: $red;
   padding: 1em;
   border-radius: 5px;
 }
 
 .message-info {
-  border: 2px solid #2F56A2;
-  color: #2F56A2;
+  border: 2px solid $blue;
+  color: $blue;
+  padding: 1em;
+  border-radius: 5px;
+}
+
+.message-success {
+  border: 2px solid $green;
+  color: $green;
   padding: 1em;
   border-radius: 5px;
 }
